[package]
name = "ptrwatch"
version = "0.1.1"
edition = "2021"

[dependencies.argh]
version = "0.1.12"
default-features = false

[dependencies.tokio]
version = "1.40.0"
default-features = false
features = ["rt", "net"]

[dependencies.iced-x86]
version = "1.21.0"
default-features = false
features = ["decoder", "fast_fmt", "no_std"]

[dependencies.libc]
version = "0.2.158"
default-features = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
debug = false
